--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8887
 github.client.id=c7821da5e7e8a585cc79
 github.client.secret=a20926307896e4e9fa2de2359f7c2a61f6c6fd68
 github.client.url=http://localhost:8887/callback
+
+#spring.datasource.url=jdbc:h2:~/community
+##spring.datasource.username=frog
+##spring.datasource.password=220914404
+##spring.datasource.driver-class-name=org.h2.Driver
