--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>mybatis-generator-core</artifactId>
 			<version>1.3.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -118,6 +124,24 @@
 					<!-- 自动生成的配置 -->
 					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>6.2.4</version>
+				<configuration>
+					<url>jdbc:mysql://127.0.0.1:3306/community</url>
+					<user>root</user>
+					<password>123456</password>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>8.0.12</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 		</plugins>
