--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,5 @@ spring:
 mybatis:
      mapper-locations: classpath:mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
      type-aliases-package: study.community.comunity.model  # 注意：对应实体类的路径
+     configuration:
+       map-underscore-to-camel-case: true
